src/objects/Market__c.object
<CustomObject>
    <fields>
        <fullName>Market_Region__c</fullName>
        <label>Market Region</label>
        <picklist>
            <picklistValues>
                <fullName>Adelaide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brisbane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Coast / Newcastle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Coast / Tweed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illawarra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunshine Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canberra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_State__c</fullName>
        <label>Market State</label>
        <picklist>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Australia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Brokers__c</fullName>
        <label>Number of Brokers</label>
        <summaryForeignKey>Broker__c.Primary_Market__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Markets</relationshipLabel>
        <relationshipName>Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Markets</relationshipLabel>
        <relationshipName>Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sydney_Timezone_Offset__c</fullName>
        <description>Adjustment of timezone from Sydney</description>
        <label>Sydney Timezone Offset</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market_Region__c</columns>
        <columns>Market_State__c</columns>
        <columns>Number_of_Brokers__c</columns>
        <columns>Region__c</columns>
        <columns>State__c</columns>
        <columns>Sydney_Timezone_Offset__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Markets</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Region__c</columns>
        <columns>Sydney_Timezone_Offset__c</columns>
        <columns>Number_of_Brokers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Markets</label>
    </listViews>
    <nameField>
        <label>Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>